--- a/src/components/products/productImageGallery/ProductImageGallery.module.css
+++ b/src/components/products/productImageGallery/ProductImageGallery.module.css
@@ -61,7 +61,7 @@
 	.imageGallery img {
 		width: 100%;
 		height: auto;
-		aspect-ratio: 3 / 4;
-		object-fit: cover;
+		aspect-ratio: 1 / 1;
+		object-fit: contain;
 	}
 }
